# Course-work

./: CMakeLists.txt  Game.txt  GameGUI.py  GameGUI_UML.txt  main.py  visualization.py
src/game/: game.cpp  game.h
src/python/: game_module.cpp
